--- a/package.json
+++ b/package.json
@@ -9,16 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "5.5.3",
+    "@mui/x-data-grid": "^5.7.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "formik": "^2.2.9",
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "8.12.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^16.2.0",
     "eslint-config-next": "12.1.4",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "typescript": "4.6.3"
   }
 }
